src/test/deca/extension/context/invalid/no_tab_in_param.deca
class A{
    int[] e(int[] r ){
        return r;
    }



}
{
    A a = new A();
    a.e(4);
}